# Njin

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: njin-setup.cmake
src/: CMakeLists.txt  main.cpp  program.cpp  program.h  renderer.cpp  renderer.h
